add api for industry
